# InfraCostOptimization

./: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  ec2_cloudwatch_metrics.py  ec2_metrics_schema.sql  main.py  pyproject.toml  ruff_output.txt  s3ToPostgresETL.py  sqlToPostgres.py
agent-ui/: eslint_report.txt  index.html  package-lock.json  package.json
agent-ui/src/: App.jsx  AppLight.jsx  main.jsx
agent_backend/: __init__.py  cache.py  catalog.py  database.py  eval_report.json  eval_runner.py  eval_scenarios.json  live_report.html  live_report.py  llm_service.py  main.py  mcp_aws_pricing.py  pricing.py  prompt_builder.py  requirements.txt  savings.py
agent_backend/agents/analysis/: analysis_agent.py
agent_backend/agents/cost/: cost_agent.py
agent_backend/agents/orchestrator/: savings.py
agent_backend/data/: cloud_agent.py  database.py  ec2_cloudwatch_metrics.py
agent_backend/eval/: eval_runner.py  live_report.py
agent_frontend/: App.jsx
docker/: nginx.conf
scripts/: generate_mock_data.py
